# config_module

./: README.md  pyproject.toml
config_module/: __init__.py  app_init.py  config_client.py  config_loader.py  config_singleton.py
config_module/proto/: config.proto  config_pb2.py  config_pb2_grpc.py
tests/: test_config_client.py
